[gd_scene load_steps=5 format=3 uid="uid://dsnqk3rnhvde2"]

[ext_resource type="Texture2D" uid="uid://bvs2cdqmnpl1m" path="res://assets/wall_tiles/1L.png" id="1_wkc41"]
[ext_resource type="Texture2D" uid="uid://bhhunglhwx7j7" path="res://assets/wall_tiles/1R.png" id="2_kdva4"]
[ext_resource type="Script" path="res://scripts/wall_tile.gd" id="3_fvhwo"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1ljab"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_wkc41")
}, {
"duration": 1.0,
"texture": ExtResource("2_kdva4")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}]

[node name="wall_tile" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_1ljab")
animation = &"1"
script = ExtResource("3_fvhwo")

[node name="hitbox_area_wall" type="Area2D" parent="."]
y_sort_enabled = true
collision_layer = 32768
collision_mask = 32768

[node name="collisionL" type="CollisionPolygon2D" parent="hitbox_area_wall"]
position = Vector2(4, 2)
polygon = PackedVector2Array(-16, -12, 15, -27, 16, 13, -16, 28)

[node name="collisionR" type="CollisionPolygon2D" parent="hitbox_area_wall"]
polygon = PackedVector2Array(-20, -26, 12, -10, 12, 29, -20, 14)

[connection signal="mouse_entered" from="hitbox_area_wall" to="." method="_on_hitbox_area_wall_mouse_entered"]
[connection signal="mouse_exited" from="hitbox_area_wall" to="." method="_on_hitbox_area_wall_mouse_exited"]
